Fix text-decoration bug on IE

--- a/task1/buttonStyle.css
+++ b/task1/buttonStyle.css
@@ -1,6 +1,7 @@
 .btn {
   display: block;
   position: relative;
+  text-decoration: none;
 
   width: 15em;
   height: 5em;
@@ -32,9 +33,8 @@
   
   content: "BOZBOZ";
   color: white;
-  text-decoration: none;
   text-align: center;
-  
+
   position: absolute;
   width: 100%;
   top: 2em;
@@ -48,8 +48,7 @@
 
   content: "\2665 \2665";
   color: red;
-  text-decoration: none;
-  
+
   position: absolute;
   width: 100%;
   top: 0.7em;
